fix: add overflow to the body element

--- a/src/styles/globals/_body.css
+++ b/src/styles/globals/_body.css
@@ -2,6 +2,7 @@ body {
     background-color: var(--color-bg);
     container-name: body;
     container-type: size;
+    overflow: auto;
 }
 
 body:is([overlay-open],[nav-is-open],[contact-box-is-open]) {
